--- a/vignettes/motifcounter.Rmd
+++ b/vignettes/motifcounter.Rmd
@@ -9,11 +9,12 @@ output:
         fig_caption: yes
         fig_height: 4
         fig_width: 6
+        css: motifcounter.css
 vignette: >
     %\VignetteIndexEntry{Introduction to the `motifcounter` package}
     %\VignetteEngine{knitr::rmarkdown}
     %\VignetteEncoding{UTF-8}
-bibliography: literature.bib
+#bibliography: literature.bib
 ---
 
 
@@ -42,7 +43,7 @@ If it is of help for your analysis, please cite
     note = {R package version 0.99.0},
 }
 ```
-# Quick start
+# Usage examples
 
 ```{r eval=FALSE}
 # Estimate a background model on a set of sequences
@@ -79,11 +80,11 @@ scores <- motifEnrichment(sequences, motif, bg)
 ## Biological background
 
 Transcription factors (TFs) play a crucial role in gene regulation.
-They function by recognising and binding to specific DNA stretches
+They function by recognizing and binding to specific DNA stretches
 that are usually 5-30bp in length
 which are referred to as *transcription factor binding sites* (TFBSs).
-TF-binding acts on the neighbouring
-genes by up- or downregulating their gene expression levels.
+TF-binding acts on the neighboring
+genes by up- or down-regulating their gene expression levels.
 
 The aim of the `motifcounter` package is to provide statistical
 tools for studying putative TFBSs in given DNA sequence, including
@@ -94,67 +95,74 @@ the presence and location of TFBSs and the enrichment of TFBSs.
 The main ingredients for an analysis with `motifcounter` consist of
 
 1. a position frequency matrix (PFM) (also called TF motif)
-2. a background model
-3. a set of DNA sequences that should be scanned for TFBSs
-4. a *false positive probability* $\alpha$ to obtain a motif hit 
-    in a random sequence
+2. a background model that serves as a reference for the statistical analysis
+3. a set of DNA sequences that is subject to the TFBS analysis
+4. a *false positive probability* $\alpha$ for predicting TFBSs
+    in a random sequence. E.g. $\alpha=0.001$.
 
 A **PFM** represents the affinity of a TF to bind a certain DNA segment. A
 large set of known PFMs can be acquired e.g. from 
 the `MotifDb` package [@motifdb].
 On the other hand,
-the **background model** defines the properties of random DNA sequences.
+the **background model** defines the properties of unbound DNA sequences.
 `motifcounter` implements the background model as an
-**order-$d$ Markov model**, where the order $d$ is chosen by the user.
+**order-$d$ Markov model**, where $d$ is prescribed by the user.
 The advantage of using higher-order background models is that they
 are able to capture higher-order sequence features which is crucial
-for studying real DNA sequences that are rich in
-higher-order sequence features (e.g. in CpGs islands).
+for studying naturally occurring DNA sequences that are rich in
+such features (e.g. in CpGs islands).
 
 Using the PFM and the background model, `motifcounter` computes
-the **motif score** for a give DNA sequence,
+the **motif score** for a given DNA sequence,
 which is defined to be the log-likelihood ratio 
 between the PFM and the background.
 The motif score represents a measure that indicates whether a certain
 position in the DNA sequence is bound or unbound by the TF. Intuitively, 
-the higher the score, the more like the location is a TFBSs.
+the higher the score, the more like does the sequence represent a TFBS.
 
 The motif scores are also used to determine
 **motif hits** (e.g. putative TFBSs) in the DNA sequence.
 To this end, `motifcounter`
-uses a pre-determined **score threshold** upon which it is decided
-whether a position in the DNA sequence represents a putative TFBS or not.
+uses a predetermined **score threshold** 
+and calls putative TFBSs whenever the observed score at a give 
+position is greater or equal to the score threshold.
 `motifcounter` establishes the **score threshold**
 automatically based on 1) the
-**score distribution** and 2) $\alpha$ (the
-probability to observe a motif hit in a random DNA sequence).
-In `motifcounter`, the score distribution is determined by
+**score distribution** and 2) the user-prescribed false positive level $\alpha$.
+To this end, the score distribution is determined by
 an efficient dynamic programming algorithm for general order-$d$
 background models, similar as described in [@rahmann, @rsat1].
 
 Testing for **motif hit enrichment** in `motifcounter` is based
 on the **number of motif hits** that are observed in a set of DNA sequences.
-Consequently, the statistical significance for 
-the notif enrichment is based on the
-**distribution of the number of motif hits** 
-in a set of random DNA sequences.
+In order to be able to judge significance of the observed number of hits 
+(e.g. 10 predicted TFBSs in the sequence of length 10kb), 
+the package approximates the  **distribution of the number of motif hits** 
+in random DNA sequences with matched lengths.
 
-`motifcounter` provides two fast and accurate analytical
-approximations of the distribution of the number of motif hits:
+Accordingly, `motifcounter` provides two fast, accurate alternatives
+for approximating this distribution:
 
 1. A compound Poisson approximation
 2. a combinatorial model
 
+Both of those methods support higher-order background models and
+account for the **self-overlapping** structure of the motif, which
+could lead to mutually **overlapping motif hits**, which  
+are referred to as **clumps** [@reinert, @pape]^[
+This is in contrast to the simple binomial approximation which was suggested
+in several publications [@rsat1,@rahmann]].
+**Clumping** is characteristic for self-overlapping motifs,
+including repeat-like motifs or palindromic motifs. 
+`motifcounter` not only account for overlapping motif hits
+with respect to a single DNA strand, but also 
+for overlapping reverse complementary hits,
+if both DNA strands are scanned for motif hits.
+It is essential
+to account for clumping, as that influences the distribution
+of the number of motif hits and thereby the motif hit enrichment test. 
+Ignoring this effect could cause misleading statistical conclusions.
 
-The main advantage of those two models (as opposed to using a
-simple binomial approximation [@rsat1,@rahmann])
-is that they account for the coupling of motif hits due to
-mutually **overlapping motif hits**, which are referred to as
-**clumps** [@reinert].
-**Clumping** is particularly  characteristic for self-overlapping motifs,
-including repeat-like motifs or palindromic motifs. It is necessary
-to account for clumping, as it influences the distribution
-of the number of motif hits and thereby the motif hit enrichment test.
 
 The compound Poisson model in `motifcounter` is based
 on an improvement upon [@pape], which was extended to support order-$d$
@@ -163,47 +171,36 @@ determine the clump size distribution.
 
 On the other hand,
 the combinatorial model is based on summing over all permutations of
-placing the $k$ hits in a finite-length sequence, which computed
-based on a dynamic programming strategy and is related
-to the approach proposed by [@zhang]^[`motifcounter`, however, 
+placing the $k$ hits in a finite-length sequence, which employs
+an efficient dynamic programming algorithm, related
+to the approach proposed by [@zhang]^[By contrast, `motifcounter` 
 does not seek to enumerate all compatible words that give rise to
-a motif hit, but is rather based on a fast approximation
-of overlapping hit probabilities. This makes the combinatorial approximation
-applicable for arbitrary lengths and structures of motifs as well as rather
-relaxed choices of $\alpha$].
-
-`motifcounter` not only accounts for clumps of motif hits
-on a single DNA strand, but
-also for clumps that result from scanning both DNA strands for motif hits.
+motif hits, of which there might be exponentially many 
+depending on the motif length,
+but is it rather based on a fast approximation
+of overlapping hit probabilities. 
+This makes the combinatorial approximation
+applicable for arbitrary motif lengths, motif structures and
+choices of $\alpha$].
 
 
 # Getting started
 ## Preliminary steps
 ### Acquire a background model
 The background model is used to specify the 
-theoretical properties of random DNA sequences.
-`motifcounter` uses the background model to 
-derive the theoretical *score distribution*
-and the *distribution of the number of motif hits* 
-for a given motif (and $\alpha$) in a random DNA sequence.
+properties of unbound DNA sequences. That is, it 
+plays a role as a reference
+for identifying putative TFBSs as well as for judging
+motif hit enrichment.
 
-In `motifcounter`, the background model is implemented 
-as an order-$d$ Markov model. A background model is obtained 
-from a given set of DNA sequences. Ideally, the DNA sequence for 
-estimating the background model should be representative (or even the same)
-as the sequences that are latter analysed (e.g. for motif hit enrichment).
+In `motifcounter`, offers the opportunity to use
+order-$d$ Markov model with user-defined $d$.
+The background model is estimated on a set of user-provided
+DNA sequences which are supplied as 
+`DNAStringSet`-objects from the `Biostrings` bioconductor package.
 
-Furthermore, `motifcounter` allows the user to choose the order $d$ of the 
-background model that should be used for the analysis.
-While, higher-order models tend to be more accurate for representing the real
-DNA sequence, they come at a higher computational cost. 
-Therefore, as a compromise, we recommend to use orders $d=1$ or $d=2$. 
-
-
-The following code fragment examplifies how an order-$1$ 
-background model is estimated from a given set of DNA sequences. 
-To this end, the set of DNA sequences must be supplied as
-an `DNAStringSet` object from the `Biostrings` bioconductor package.
+The following code fragment illustrates how an order-$1$ 
+background model is estimated from a given set of DNA sequences:
 ```{r}
 order <- 1
 file <- system.file("extdata", "seq.fasta", package = "motifcounter")
@@ -211,6 +208,18 @@ seqs <- Biostrings::readDNAStringSet(file)
 bg <- readBackground(seqs, order)
 ```
 
+<div class="hint">
+**Hint:** Ideally, the DNA sequence for 
+estimating the background model should be representative (or even the same)
+as the sequences that are latter analysed (e.g. for motif hit enrichment).
+</div>
+<br>
+<div class="hint">
+**Hint:** While, higher-order models tend to be more 
+accurate for representing the 
+naturally occurring DNA sequence, they come at a higher computational cost.
+As a compromise, we recommend to use orders $d=1$ or $d=2$.
+</div>
 ### Acquire a motif
 `motifcounter` handles motifs in terms of 
 *position frequency matrices* (PFMs), which are commonly
@@ -224,34 +233,43 @@ transcription factor as follows
 
 
 ```{r}
+# Extract the Oct4 motif from MotifDb
 library(MotifDb)
-oct4 <- as.list(query(query(query(MotifDb, "hsapiens"), "pou5f1"), "jolma2013"))[[1]]
+oct4 <- as.list(query(query(query(MotifDb, "hsapiens"), 
+                "pou5f1"), "jolma2013"))[[1]]
 motif <- oct4
+
+# Visualize the motif using seqLogo
+library(seqLogo)
+seqLogo(motif)
 ```
 
-**NOTE:** `motifcounter` requires the PFMs to be matrices 
-with strictly positive entries.
-If this is not the case, the package provides the 
-function `normalizeMotif`, which adds
-pseudo-observations to each element of the matrix and renormalize the columns:
+<div class="hint">
+**Hint:** `motifcounter` requires strictly positive entries for a PFM.
+If this is not the case, the package provides
+the function `normalizeMotif`, which adds
+pseudo-observations and re-normalize the columns:
 
 ```{r}
 new_motif <- normalizeMotif(motif)
 ```
+</div>
 
 
 ### Optional settings
 
-By default the false positive probability $\alpha$ to obtain
-a motif hit in random sequences is set to $\alpha=0.001$. The user might change
-the stringency level of $\alpha$ globally using the `motifcounterOptions`.
+By default, `motifcounter` identifies TFBS with a 
+the false positive probability of $\alpha=0.001$. 
+The user might want to change 
+the stringency level of $\alpha$, which is facilitated by `motifcounterOptions`:
 
 ```{r eval=FALSE}
 alpha <- 0.01
 motifcounterOptions(alpha)
 ```
 
-Please consult `?motifcounterOptions` for more information.
+For other global options of `motifcounter`, 
+please consult `?motifcounterOptions` for more information.
 
 
 
@@ -271,176 +289,170 @@ oct4peaks <- Biostrings::readDNAStringSet(file)
 The `motifcounter` package provides functions for exploring 
 position- and strand-specific putative TFBSs in individual DNA sequences.
 One way to explore a given DNA sequence for TFBSs is by 
-utilizing `scoreSequence`. This function returns the scores at each 
-position and strand for a given `Biostring::DNAString`-object 
+utilizing `scoreSequence`. This function returns the per position and 
+strand scores  for a given `Biostring::DNAString`-object 
 (left panel below).
 To put the observed scores into perspective, the right panel shows
 the theoretical score distribution in random sequences, which
-is obtained by `scoreDist`. Scores at the tail of the distribution 
-occur very rarely by chance:
+is obtained by `scoreDist`^[The score distribution is computed using an 
+efficient dynamic programming algorithm.]. Scores at the tail of 
+the distribution occur very rarely by chance. 
+Those are also the ones that give rise to TFBS predictions:
 
 ```{r fig.show=TRUE, fig.cap="Per-position and strand scores"}
-seq <- oct4peaks[[1]]
 # Determine the per-position and per-strand scores
-scores <- scoreSequence(seq, motif, bg)
+scores <- scoreSequence(oct4peaks[[1]], motif, bg)
+
 # As a comparison, compute the theoretical score distribution
 sd <- scoreDist(motif, bg)
-par(mfrow = c(1, 2))
-plot(1:length(scores$fscores), scores$fscores, type = "l", col = "blue", xlab = "position", 
-  ylab = "score", ylim = c(min(sd$score), max(sd$score)), xlim = c(1, 250))
-points(scores$rscores, col = "red", type = "l")
-legend(120, 11, c("forw.", "rev."), col = c("blue", "red"), lty = c(1, 1))
 
-# plot the the score distribution for the comparison
+par(mfrow = c(1, 2))
+# Plot the observed scores, per position and per strand
+plot(1:length(scores$fscores), scores$fscores, type = "l", 
+    col = "blue", xlab = "position", ylab = "score", 
+    ylim = c(min(sd$score), max(sd$score)), xlim = c(1, 250))
+points(scores$rscores, col = "red", type = "l")
+legend("topright", c("forw.", "rev."), col = c("blue", "red"), lty = c(1, 1))
+
+# Plot the theoretical score distribution for the comparison
 plot(sd$dist, sd$scores, type = "l", xlab = "probability", ylab = "")
 ```
 
-Alternatively, `motifcounter` provides an analogous function for determining
-the per-position and per-strand motif hit occurrences 
-using `motifHits` that emerge with a stringency level $\alpha=0.001$ 
-(`motifcounter`'s default setting).
+To obtain the predicted TFBSs positions and strands, `motifcounter` provides
+the function `motifHits`. This function, applies a score 
+threshold^[The threshold is obtained for a user-defined false 
+positive level $\alpha$ (e.g. $\alpha=0.001$), which is determined
+from the theoretical score distribution.] for
+calling the motif hits based on the observed scores.
 
 ```{r}
-seq <- oct4peaks[[1]]
-mhits <- motifHits(seq, motif, bg)
+# Call putative TFBSs
+mhits <- motifHits(oct4peaks[[1]], motif, bg)
+
+# Inspect the result
 fhitpos <- which(mhits$fhits == 1)
 rhitpos <- which(mhits$rhits == 1)
 fhitpos
 rhitpos
 ```
-In the given sequence, we obtain no motif hit on the forward strand and 
+In the example sequence, we obtain no motif hit on the forward strand and 
 one motif hit on the reverse strand at position 94. 
 The underlying DNA sequence at this hit can be retrieved by
 
 ```{r}
-seq[rhitpos:(rhitpos + ncol(motif) - 1)]
+oct4peaks[[1]][rhitpos:(rhitpos + ncol(motif) - 1)]
 ```
 
-Relaxing stringency for obtaining motif hits
-(e.g. to a false positive probability of $\alpha=0.01$ 
-via `motifcounterOptions`)
-will tend to produce more motif hits.
+Next, we illustrate how a relaxed stringency level influences 
+the number of motif hits. Using `motifcounterOptions`, we prescribe a
+false positive probability of $\alpha=0.01$ (the default was $\alpha=0.001$).
+This will increase the tendency of producing motif hits
 
 ```{r}
+# Prescribe a new false positive level for calling TFBSs
 motifcounterOptions(alpha = 0.01)
 
-mhits <- motifHits(seq, motif, bg)
+# Determine TFBSs
+mhits <- motifHits(oct4peaks[[1]], motif, bg)
 
 fhitpos <- which(mhits$fhits == 1)
 rhitpos <- which(mhits$rhits == 1)
 fhitpos
 rhitpos
 ```
-For example, now we observe four hits on either strand 
-in the same sequence which was used above.
+Now we obtain four hits on each strand.
 
 ### Analysis of a set of DNA sequences
 
 While, `scoreSequence` and `motifHits` can be applied to study 
-TFBSs in `DNAString`-objects, one might also be interested in the 
+TFBSs in a single DNA sequence (given by a `DNAString`-object), 
+one might also be interested in the 
 average score or motif hit profiles across multiple sequences of equal length.
 This might reveal positional constraints of the motif occurrences 
-with respect to e.g. the TSS, or the middle or summit of the ChIP-seq peaks.
-To study positional constrains, 
-`motifcounter` provides the `scoreProfile` 
-method which can be applied for a `Biostrings::DNAStringSet`-object.
+with respect to e.g. the TSS, or the summit of ChIP-seq peaks.
+On the one hand,
+`motifcounter` provides the method `scoreProfile` 
+which can be applied for `Biostrings::DNAStringSet`-objects.
 
 ```{r fig.show=TRUE, fig.cap="Average score profile"}
-
+# Determine the average score profile across all Oct4 binding sites
 scores <- scoreProfile(oct4peaks, motif, bg)
 
-plot(1:length(scores$fscores), scores$fscores, type = "l", col = "blue", xlab = "position", 
-  ylab = "score")
+plot(1:length(scores$fscores), scores$fscores, type = "l", 
+    col = "blue", xlab = "position", ylab = "score")
 points(scores$rscores, col = "red", type = "l")
-legend("bottomleft", legend = c("forward", "reverse"), col = c("blue", "red"), lty = c(1, 1))
+legend("bottomleft", legend = c("forward", "reverse"), 
+    col = c("blue", "red"), lty = c(1, 1))
 ```
 
-Furthermore, `motifHitProfile` constructs a similar profile by computing
+On the other hand, `motifHitProfile` constructs a similar profile by computing
 the position and strand specific mean motif hit frequency
 
 ```{r fig.show=TRUE, fig.cap="Average motif hit profile"}
-motifcounterOptions()  # let's use the default alpha again
+motifcounterOptions()  # let's use the default alpha=0.001 again
 
+# Determine the average motif hit profile
 mhits <- motifHitProfile(oct4peaks, motif, bg)
 
-plot(1:length(mhits$fhits), mhits$fhits, type = "l", col = "blue", xlab = "position", 
-  ylab = "score")
+plot(1:length(mhits$fhits), mhits$fhits, type = "l", 
+    col = "blue", xlab = "position", ylab = "score")
 points(mhits$rhits, col = "red", type = "l")
-legend("bottomleft", legend = c("forward", "reverse"), col = c("blue", "red"), lty = c(1, 1))
+legend("bottomleft", legend = c("forward", "reverse"), 
+    col = c("blue", "red"), lty = c(1, 1))
 ```
 
 
 ## Test for motif hit enrichment
 
-A fundamental task in Bioinformatics concerns the task of determining
-statistically enriched TFBS occurrences in DNA sequences.
-To this end, `motifcounter` determines a fast and accurate approximation
-of the *distribution of the number of motif hits* based on either
-the **compound Poisson distribution** or the **combinatorial distribution**.
+A central feature of `motifcounter` represents a sophisticated
+novel approach for identifying motif hit enrichment in DNA sequences.
 
-Motif hit enrichment can be determined using the function `motifEnrichment`,
-which requires a set of DNA sequences of interest, a PFM and a background model.
+To this end, the package contains the method `motifEnrichment`,
+which evaluates the *P-value* associated with the number of motif hits
+that are found in the observed sequence, compared to the background model.
 
 ```{r}
-#take a subset of the oct4 peaks
-seqs <- oct4peaks[1:10]
-
 # Enrichment of Oct4 in Oct4-ChIP-seq peaks
-result <- motifEnrichment(seqs, motif, bg)
+result <- motifEnrichment(oct4peaks[1:10], motif, bg)
 result
 ```
 
-The result of this analysis is a list that contains 
-`pvalue` as well as `fold`, where `fold`
-represents the fold-enrichment of motif hits with respect to the 
-expected number of hits that emerge in random DNA sequences of the
-same length. 
+The method returns a list that contains
+`pvalue` as well as `fold`. While, the `pvalue` represents
+the probability that more or equally many hits are produced in 
+random DNA sequences, `fold` represents the fold-enrichment of 
+motif hits relative the 
+expected number of hits in random DNA sequences.
+That is, it represents a measure of the effect size.
 
-**Note:** Be aware that if the expected number of motif hits very high
-(e.g. >1000), the *P-values* that are produced will almost always tend 
-towards zero, because the distribution of the number of motif hits
-becomes very narrow. In this case, the fold-enrichment gives an indication
-as to how strongly the DNA is enriched for motif hits, nevertheless.
-
-By default, `motifEnrichment` scans both DNA strands for motif hits and  
-draws its statistical conclusions based on the compound Poisson model.
-Please consult `?motifEnrichment` if only a single strand should be scanned
-for enrichment or if the combinatorial model should be invoked for the
-analysis.
-
-
-### When to use the combinatorial or the compound Poisson model
-
-The combinatorial model and the compound Poisson approximation both aim
-towards modelling the distribution of the number of motif hits and
-will mostly yield similar results, but they come 
-advantages and disadvantages as well.
-In this section, we describe in which cases each approximation is expected to
-yield accurate results and in which cases the underlying assumptions for each 
-method might be violated. In the latter case, the results of the enrichment 
-analysis might be misleading.
-
-If there is no strong preference in changing the default parameters,
-the compound Poisson approxmiation is most likely your the method of choice.
-
-The compound Poisson approximation is based on the assumption that motif hits
-rarely occur in random sequences. This is also referred to as the Poisson 
-assumption.  This means that one should use rather stringent 
-false positive probabilities $\alpha=0.001$ or smaller.  Relaxed 
-stringency levels result in a conservative *P-value* estimates, 
-as in this case the approximation tends to over-estimation of 
-the number of motif hits.
-
-The main benefit of the combinatorial model is that it does not presume 
-a rare number of hits, because of the different algorithmic approach.
-Therefore, it can be used for rather relaxed choices 
-of $\alpha$ (e.g. even $\alpha=0.05$). However, the combinatorial model 
-also serves as an accurate model for fairly stringent choices of $\alpha$, 
-in which the results are very similar to the compound Poisson approximation.
-The downside of the combinatorial model is, however, the 
-comparably high computational burden. Moreover, the combinatorial 
-model is restricted to analysing only fixed-length sequences  
-and at the moment only supports scanning for motif hits
-in both DNA strands.
-
-
+<div class="hint">
+**Hint:** In case, very long or many DNA sequences are scanned for
+TFBSs, the underlying distribution of the number of motif hits, which
+is the basis for the *P-value*-estimate, will be very narrow.
+In that case, the tiniest differences between the observed and the 
+expected number of hits are prone to cause very low *P-values*.
+In that case, check it the fold-enrichment points to an reasonable
+effect size.
+</div>
+<br>
+<div class="hint">
+**Hint:** By default, `motifEnrichment` scans both DNA strands 
+for motif hits and draws its statistical conclusions based 
+on the compound Poisson model. However, motif enrichment can 
+also be performed with respect to scanning
+single strands (e.g. when analyzing RNA sequences).
+Please consult `?motifEnrichment` for the single strand option.
+</div>
+<br>
+<div class="hint">
+**Hint:** `motifEnrichment` may optionally invoke two alternative approaches for
+approximating the *P-value*, 1) by a **compound Poisson approxmiation**
+and 2) by a **combinatorial approximation** (see `?motifEnrichment`).
+As a rule of thumb, we recommend the use 
+compound Poisson model for studying long (or many ) DNA sequences with
+a fairly stringent $\alpha$ (e.g. 0.001 or smaller).
+On the other hand, a relaxed $\alpha$ is more 
+desirable for your analysis (e.g $\alpha\geq 0.01$),
+we recommend the computationally more costly, but also more accurate
+**combinatorial approximation**.
+</div>
