corrected citation information

--- a/vignettes/motifcounter.Rmd
+++ b/vignettes/motifcounter.Rmd
@@ -39,8 +39,8 @@ If it is of help for your analysis, please cite
 @Manual{,
     title = {motifcounter: R package for analysing TFBSs in DNA sequences},
     author = {Wolfgang Kopp},
-    year = {2016},
-    note = {R package version 0.99.0},
+    year = {2016-2017},
+    doi = {10.5281/zenodo.841352}
 }
 ```
 # Usage examples
