--- a/vignettes/motifcounter.Rmd
+++ b/vignettes/motifcounter.Rmd
@@ -40,7 +40,7 @@ If it is of help for your analysis, please cite
     title = {motifcounter: R package for analysing TFBSs in DNA sequences},
     author = {Wolfgang Kopp},
     year = {2016-2017},
-    doi = {10.5281/zenodo.841352}
+    doi = {10.18129/B9.bioc.motifcounter}
 }
 ```
 # Usage examples
