--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+CHANGES IN VERSION 1.1.9
+-------------------------
+o Removed compiler warnings
+o Changes to the vignette
+
 CHANGES IN VERSION 1.1.8
 -------------------------
 o Internal refactoring
