--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+CHANGES IN VERSION 1.3.2
+-------------------------
+o Changed contact information
+
 CHANGES IN VERSION 1.1.9
 -------------------------
 o Removed compiler warnings
