--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+CHANGES IN VERSION 1.5.3
+-------------------------
+o Fast motif matching
+  Various improvements to improve
+  motif matching speed were implemented.
+  1. Precomputed position weights
+  to avoid the invokation of the log function
+  during scanning. 2. threshold argument
+  added to avoid having to determine the score
+  distribution for each sequence individually.
+  3. Stop as soon as the motif score cannot
+  or is certainly exceeding the threshold.
+
 CHANGES IN VERSION 1.5.2
 -------------------------
 o scoreSequence, 
