--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+CHANGES IN VERSION 1.5.4
+-------------------------
+o Accept DNAString wherever DNAStringSet
+  was accepted.
+
 CHANGES IN VERSION 1.5.3
 -------------------------
 o Fast motif matching
